Fixed dark mode colors

--- a/src/content/www/static/css/tailwind.css
+++ b/src/content/www/static/css/tailwind.css
@@ -64,7 +64,7 @@
     /*                                           NAVIGATION                                           */
     /* ---------------------------------------------------------------------------------------------- */
     .nav-link {
-        @apply inline-flex flex-col items-center text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-400 font-sans font-normal text-base flex-1;
+        @apply inline-flex flex-col items-center text-gray-500 hover:text-gray-700 dark:text-white dark:hover:text-gray-100 font-sans font-normal text-base flex-1;
     }
 
     /* ------------------------------------------ Drop Down ----------------------------------------- */
